--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
 
     <meta charset="UTF-8">
+    <meta data-n-head="ssr" name="viewport" content="width=device-width, initial-scale=1">
     <title>TailwindCSS Resturent by getidea.net</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/GrayGrids/LineIcons/LineIcons.css">
-    <link rel="stylesheet" href="assets/css/lib/slick.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="assets/css/stylesheets/screen.css ">
 </head>
 
@@ -19,37 +20,37 @@
 
         <!--home header cover start-->
         <div class="home-header-cover h-screen relative ">
-            <div class="circle-color absolute "></div>
+            <div class="circle-color absolute"></div>
 
 
             <div class="container mx-auto relative z-10 ">
-                <div class="inner p-3 mt-8 ">
+                <div class="inner p-3 lg:mt-8 ">
 
                     <!-- navbar top start -->
-                    <nav class="navbar-top ">
+                    <nav class="navbar-top">
 
                         <div class="flex flex-wrap lg:flex-no-wrap ">
 
-                            <div class="w-auto flex items-baseline justify-center h-8 ">
+                            <div class="w-1/6 wlg:w-auto flex items-baseline justify-center h-8 ">
                                 <div class="megamenu-burgur inner cursor-pointer text-2xl flex items-center relative ">
                                     <span>
                                         <i class="lni-menu block "></i>
                                     </span>
-                                    <span class="inline-block ml-4 pt-1 text-xl font-semibold ">
+                                    <span class="hidden lg:inline-block ml-4 pt-1 text-xl font-semibold ">
                                         Menu
                                     </span>
 
                                     <div class="megamenu-wrapper bg-white absolute rounded overflow-hidden shadow-lg ">
                                         <ul class="megamenu grid flex flex-wrap text-xl ">
 
-                                            <li class="grid-item w-1/4 ">
+                                            <li class="grid-item lg:w-1/4 ">
                                                 <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-t-0 border-l-0 h-16 items-center justify-center h-32 block inner px-2 py-4 ">
                                                     Order Food
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item w-1/4 ">
+                                            <li class="grid-item lg:w-1/4 ">
                                                 <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border h-16 items-center justify-center block inner px-2 py-4 ">
                                                     Book a Table
                                                 </a>
@@ -63,28 +64,28 @@
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item w-1/4 ">
+                                            <li class="grid-item lg:w-1/4 ">
                                                 <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border-b-0 h-32 items-center justify-center block inner px-2 py-4 ">
                                                     Lunch
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item w-1/4 ">
+                                            <li class="grid-item lg:w-1/4 ">
                                                 <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 h-16 items-center justify-center block inner px-2 py-4 ">
                                                     Brakfast
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item w-1/4 ">
+                                            <li class="grid-item lg:w-1/4 ">
                                                 <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner px-2 py-4 ">
                                                     Dinner
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item w-1/4 ">
+                                            <li class="grid-item lg:w-1/4 ">
                                                 <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner px-2 py-4 ">
                                                     Luxury Dining
                                                 </a>
@@ -112,30 +113,31 @@
                             </div>
                             <!-- menu icon end -->
 
-                            <div class="w-full text-center flex items-baseline justify-center h-8 ">
+                            <div class="w-2/3 lg:w-full text-center flex items-baseline justify-center h-8 ">
                                 <div class="inner ">
-                                    <h1 class="text-logo text-2xl tracking-widest text-gray-900 mb-0 inline-block font-semibold text-shadow ">Tailwind Resturent</h1>
+                                    <h1 class="text-logo text-xl lg:text-2xl tracking-widest text-gray-900 mb-0 inline-block font-semibold text-shadow ">
+                                        Tailwind Resturent</h1>
                                     <!-- text logo end-->
                                 </div>
 
                             </div>
                             <!-- logo end -->
 
-                            <div class="w-auto ">
-                                <div class="inner ">
+                            <div class="w-1/6 wlg:w-auto">
+                                <div class="inner">
                                     <ul class="megamenu-grid links-list flex items-center justify-center h-8 pb-2 ">
-                                        <li>
+                                        <li class="hidden lg:block">
                                             <a class="block px-3 text-xl " href=" ">
                                                 <i class="lni-search block "></i>
                                             </a>
-                                        </li>
-                                        <li>
+                                        </li class="hidden lg:block">
+                                        <li class="hidden lg:block">
                                             <a class="block px-3 text-xl " href=" ">
                                                 <i class="lni-cart block "></i>
                                             </a>
                                         </li>
                                         <li class="navbar-top-links-dropdown-wrapper relative ">
-                                            <span class="block px-3 text-xl flex items-center mt-1 ">
+                                            <span class="block px-3 text-base lg:text-xl flex items-center lg:mt-1">
                                                 <span class="block mt-2 mr-2 ">EN</span>
                                             <i class="lni-chevron-down block "></i>
                                             </span>
@@ -170,27 +172,115 @@
                     <!-- navbar top end -->
 
 
+
                     <!-- carousel wrapper start -->
-                    <div class="carousel-wrapper border h-screen-75 flex items-center mt-16">
+                    <div class="carousel-wrapper relative flex items-center h-screen-85 lg:mt-0">
+
+                        <!-- Slider main container -->
+                        <div class="swiper-container">
+
+                            <!-- Additional required wrapper -->
+                            <div class="swiper-wrapper">
+
+                                <!-- Slide start -->
+                                <div class="swiper-slide w-full flex flex-wrap items-center">
+
+                                    <div class="w-full lg:w-1/2">
+                                        <div class="inner text-center lg:text-left lg:px-24 mb-4 lg:mb-0">
+                                            <h1 class="text-3xl lg:text-6xl tracking-tight capitalize text-white leading-none font-bold">
+                                                Your gateway
+                                                <span> to the
+                                                    <span class="text-black">world of</span>
+                                                </span>
+                                                <span class="block text-black">kosher</span>
+                                            </h1>
+                                        </div>
+                                    </div>
+
+                                    <div class="w-full lg:w-1/2">
+                                        <div class="inner lg:pr-24">
+                                            <img src="assets/images/food/plate-2.png" alt="food picture" class="block mx-auto w-3/4 lg:w-5/6">
+                                        </div>
+                                    </div>
 
 
-                        <div class="flex flex-wrap items-center">
+                                </div>
+                                <!-- Slide end -->
 
-                            <div class="w-1/2">
-                                <h1 class="text-4xl font-bold">Your gateway to the world <span>world of kosher</span> </h1>
+
+                                <!-- Slide start -->
+                                <div class="swiper-slide w-full flex flex-wrap items-center">
+
+                                    <div class="w-full lg:w-1/2">
+                                        <div class="inner text-center lg:text-left lg:px-24 mb-4 lg:mb-0">
+                                            <h1 class="text-3xl lg:text-6xl tracking-tight capitalize text-white leading-none font-bold">
+                                                second slide
+                                                <span> to the
+                                                    <span class="text-black">world of</span>
+                                                </span>
+                                                <span class="block text-black">kosher</span>
+                                            </h1>
+                                        </div>
+                                    </div>
+
+                                    <div class="w-full lg:w-1/2">
+                                        <div class="inner lg:pr-24">
+                                            <img src="assets/images/food/plate-3.png" alt="food picture" class="block mx-auto w-3/4 lg:w-5/6">
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                                <!-- Slide end -->
+
+
+                                <!-- Slide start -->
+                                <div class="swiper-slide w-full flex flex-wrap items-center">
+
+                                    <div class="w-full lg:w-1/2">
+                                        <div class="inner text-center lg:text-left lg:px-24 mb-4 lg:mb-0">
+                                            <h1 class="text-3xl lg:text-6xl tracking-tight capitalize text-white leading-none font-bold">
+                                                Third slide
+                                                <span> to the
+                                                    <span class="text-black">world of</span>
+                                                </span>
+                                                <span class="block text-black">kosher</span>
+                                            </h1>
+                                        </div>
+                                    </div>
+
+                                    <div class="w-full lg:w-1/2">
+                                        <div class="inner lg:pr-24">
+                                            <img src="assets/images/food/plate-1.png" alt="food picture" class="block mx-auto w-3/4 lg:w-5/6">
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                                <!-- Slide end -->
+
+
+
+
                             </div>
 
-                            <div class="w-1/2">
-                                <img src="assets/images/food/plate-2.png" alt="food picture" class="w-3/4">
-                            </div>
 
 
                         </div>
-                        <!-- flex end -->
+
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev">Prev</div>
+                        <div class="swiper-button-next">Next</div>
+
+
+                        <!-- If we need pagination -->
+                        <div class="swiper-pagination absolute lg:bottom-0 mt-64 pt-64 sm:pt-64 lg:mt-12 w-full"></div>
+
 
 
                     </div>
                     <!-- carousel wrapper end -->
+
 
                 </div>
             </div>
@@ -225,9 +315,12 @@
     <script src="assets/js/lib/jquery.min.js "></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js "></script>
     <script src="assets/js/lib/masonry.pkgd.min.js "></script>
-    <script src="assets/js/lib/slick.min.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="assets/js/script.js"></script>
 
+
+    <script>
+    </script>
 </body>
 
 </html>
