--- a/index.html
+++ b/index.html
@@ -36,71 +36,71 @@
                                     <span>
                                         <i class="lni-menu block "></i>
                                     </span>
-                                    <span class="hidden lg:inline-block ml-4 pt-1 text-xl font-semibold ">
+                                    <span class="hidden lg:inline-block ml-4 text-xl font-semibold ">
                                         Menu
                                     </span>
 
-                                    <div class="megamenu-wrapper bg-white absolute rounded overflow-hidden shadow-lg ">
+                                    <div class="megamenu-wrapper bg-white lg:rounded overflow-hidden shadow-lg ">
                                         <ul class="megamenu grid flex flex-wrap text-xl ">
 
-                                            <li class="grid-item lg:w-1/4 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-t-0 border-l-0 h-16 items-center justify-center h-32 block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/4">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border lg:border-b-0 border-t-0 border-l-0 items-center justify-center h-16 lg:h-32 block inner lg:px-2 lg:py-4 ">
                                                     Order Food
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item lg:w-1/4 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border h-16 items-center justify-center block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/4">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Book a Table
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item w-1/2 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover h-32 flex items-center justify-center block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/2 ">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover h-16 lg:h-32 flex items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Collections
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item lg:w-1/4 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border-b-0 h-32 items-center justify-center block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/4">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 lg:border-t-0 border-b-0 h-16 lg:h-32 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Lunch
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item lg:w-1/4 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 h-16 items-center justify-center block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/4">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Brakfast
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item lg:w-1/4 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/4">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Dinner
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item lg:w-1/4 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/4">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Luxury Dining
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item w-1/2 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/2 ">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Pocket-Friendly Delivery
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
-                                            <li class="grid-item w-1/2 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner px-2 py-4 ">
+                                            <li class="grid-item w-full lg:w-1/2 ">
+                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Drinks & Nightlife
                                                 </a>
                                             </li>
@@ -137,8 +137,8 @@
                                             </a>
                                         </li>
                                         <li class="navbar-top-links-dropdown-wrapper relative ">
-                                            <span class="block px-3 text-base lg:text-xl flex items-center lg:mt-1">
-                                                <span class="block mt-2 mr-2 ">EN</span>
+                                            <span class="block px-3 text-base lg:text-xl flex items-center">
+                                                <span class="block mr-2 ">EN</span>
                                             <i class="lni-chevron-down block "></i>
                                             </span>
                                             <ul class="dropdown-inner absolute right-0 bg-white rounded overflow-hidden shadow-lg ">
@@ -187,13 +187,16 @@
 
                                     <div class="w-full lg:w-1/2">
                                         <div class="inner text-center lg:text-left lg:px-24 mb-4 lg:mb-0">
-                                            <h1 class="text-3xl lg:text-6xl tracking-tight capitalize text-white leading-none font-bold">
+                                            <h1 class="text-5xl lg:text-6xl tracking-tight capitalize text-white leading-none font-bold">
                                                 Your gateway
                                                 <span> to the
                                                     <span class="text-black">world of</span>
                                                 </span>
                                                 <span class="block text-black">kosher</span>
                                             </h1>
+                                            <div class="lg:mt-5 my-2">
+                                                <a href="" class="inline-block px-5 md:py-2 md:pt-4 pt-2 text-sm lg:text-base bg-black text-white hover:bg-white hover:text-black font-semibold tracking-widest uppercase rounded hover:shadow-xl transition">View Menu</a>
+                                            </div>
                                         </div>
                                     </div>
 
@@ -220,6 +223,9 @@
                                                 </span>
                                                 <span class="block text-black">kosher</span>
                                             </h1>
+                                            <div class="lg:mt-5 my-2">
+                                                <a href="" class="inline-block px-5 md:py-2 md:pt-4 pt-2 text-sm lg:text-base bg-black text-white hover:bg-white hover:text-black font-semibold tracking-widest uppercase rounded hover:shadow-xl transition">View Menu</a>
+                                            </div>
                                         </div>
                                     </div>
 
@@ -246,6 +252,9 @@
                                                 </span>
                                                 <span class="block text-black">kosher</span>
                                             </h1>
+                                            <div class="lg:mt-5 my-2">
+                                                <a href="" class="inline-block px-5 md:py-2 md:pt-4 pt-2 text-sm lg:text-base bg-black text-white hover:bg-white hover:text-black font-semibold tracking-widest uppercase rounded hover:shadow-xl transition">View Menu</a>
+                                            </div>
                                         </div>
                                     </div>
 
@@ -274,7 +283,7 @@
 
 
                         <!-- If we need pagination -->
-                        <div class="swiper-pagination absolute lg:bottom-0 mt-64 pt-64 sm:pt-64 lg:mt-12 w-full"></div>
+                        <div class="swiper-pagination absolute bottom-0 w-full"></div>
 
 
 
