home page compated

--- a/index.html
+++ b/index.html
@@ -590,10 +590,10 @@
 
                             <!-- partner Carousel navigation buttons start -->
                             <div class="partner-carousel-arrows">
-                                <span class="text-gray-800 hover:bg-gray-800 focus:bg-gray-800 focus:text-white hover:text-white transition focus:outline-none text-center partner-swiper-button-prev text-3xl arrow border rounded-full font-sans">
+                                <span class="text-gray-800 hover:bg-gray-800 focus:bg-gray-800 focus:text-white hover:text-white transition focus:outline-none text-center partner-swiper-button-prev text-3xl arrow border rounded-full font-sans w-12 h-12">
                                     <span class="focus:outline-none">←</span>
                                 </span>
-                                <span class="text-gray-800 hover:bg-gray-800 focus:bg-gray-800 focus:text-white hover:text-white transition focus:outline-none text-center ml-2 partner-swiper-button-next text-3xl arrow border rounded-full font-sans">
+                                <span class="text-gray-800 hover:bg-gray-800 focus:bg-gray-800 focus:text-white hover:text-white transition focus:outline-none text-center ml-2 partner-swiper-button-next text-3xl arrow border rounded-full font-sans w-12 h-12">
                                     <span class="focus:outline-none">→</span>
                                 </span>
                             </div>
