menu page added

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                             <div class="w-2/3 lg:w-full text-center flex items-baseline justify-center h-8 ">
                                 <div class="inner ">
                                     <h1 class="text-logo text-xl lg:text-2xl tracking-widest text-gray-900 mb-0 inline-block font-semibold text-shadow">
-                                        Tailwind Resturent</h1>
+                                        <a href="index.html" class="block">Tailwind Resturent</a>    
+                                    </h1>
                                     <!-- text logo end-->
                                 </div>
 
@@ -189,7 +190,7 @@
 
                                     <div class="w-full lg:w-1/2">
                                         <div class="inner text-center lg:text-left lg:px-24 mb-4 lg:mb-0">
-                                            <h1 class="text-5xl lg:text-6xl tracking-tight capitalize text-white leading-none font-bold">
+                                            <h1 class="text-4xl lg:text-5xl tracking-tight capitalize text-white leading-tight font-bold">
                                                 Your gateway
                                                 <span> to the
                                                     <span class="text-black">world of</span>
@@ -197,8 +198,7 @@
                                                 <span class="block text-black">kosher</span>
                                             </h1>
                                             <div class="lg:mt-5 my-2">
-                                                <a href="" class="inline-block px-5 md:py-2 md:pt-4 pt-2 text-sm lg:text-base bg-black text-white hover:bg-white hover:text-black font-semibold tracking-widest uppercase rounded hover:shadow-xl transition">View
-                                                    Menu</a>
+                                                <a href="menu.html" class="inline-block px-5 md:py-2 text-sm lg:text-base bg-black text-white hover:bg-white hover:text-black font-semibold tracking-widest uppercase rounded hover:shadow-xl transition">View Menu</a>
                                             </div>
                                         </div>
                                     </div>
@@ -219,7 +219,7 @@
 
                                     <div class="w-full lg:w-1/2">
                                         <div class="inner text-center lg:text-left lg:px-24 mb-4 lg:mb-0">
-                                            <h1 class="text-5xl lg:text-6xl tracking-tight capitalize text-white leading-none font-bold">
+                                            <h1 class="text-4xl lg:text-5xl tracking-tight capitalize text-white leading-tight font-bold">
                                                 second slide
                                                 <span> to the
                                                     <span class="text-black">world of</span>
@@ -249,7 +249,7 @@
 
                                     <div class="w-full lg:w-1/2">
                                         <div class="inner text-center lg:text-left lg:px-24 mb-4 lg:mb-0">
-                                            <h1 class="text-5xl lg:text-6xl tracking-tight capitalize text-white leading-none font-bold">
+                                            <h1 class="text-4xl lg:text-5xl tracking-tight capitalize text-white leading-tight font-bold">
                                                 Third slide
                                                 <span> to the
                                                     <span class="text-black">world of</span>
@@ -430,7 +430,7 @@
                                                 <h3 class="font-bold text-shadow-light text-2xl lg:text-3xl text-gray-800 tracking-wide leading-none">
                                                     9 Healthy Foods That Lift Your Mood</h3>
                                             </div>
-                                            <div class="news-detail text-sm lg:text-lg text-gray-800">
+                                            <div class="news-detail text-sm lg:text-base text-gray-800">
                                                 <p>Dunt voluptatibus quod corporis Pariatur, dolorem fugit deleniti quidem quia recusandae cupiditate, blanditiis incidunt voluptatem harum, illum quasi.</p>
                                             </div>
                                             <div class="readmore mt-5">
@@ -486,7 +486,7 @@
                                                 <h3 class="font-bold text-shadow-light text-2xl lg:text-3xl text-gray-800 tracking-wide leading-none">
                                                     10 Healthy Foods That Lift Your Mood</h3>
                                             </div>
-                                            <div class="news-detail text-sm lg:text-lg text-gray-800">
+                                            <div class="news-detail text-sm lg:text-base text-gray-800">
                                                 <p>Dunt voluptatibus quod corporis Pariatur, dolorem fugit deleniti quidem quia recusandae cupiditate, blanditiis incidunt voluptatem harum, illum quasi.</p>
                                             </div>
                                             <div class="readmore mt-5">
@@ -542,7 +542,7 @@
                                                 <h3 class="font-bold text-shadow-light text-2xl lg:text-3xl text-gray-800 tracking-wide leading-none">
                                                     11 Healthy Foods That Lift Your Mood</h3>
                                             </div>
-                                            <div class="news-detail text-sm lg:text-lg text-gray-800">
+                                            <div class="news-detail text-sm lg:text-base text-gray-800">
                                                 <p>Dunt voluptatibus quod corporis Pariatur, dolorem fugit deleniti quidem quia recusandae cupiditate, blanditiis incidunt voluptatem harum, illum quasi.</p>
                                             </div>
                                             <div class="readmore mt-5">
@@ -583,7 +583,7 @@
                             </div>
 
                             <div class="news my-3 title">
-                                <h3 class="font-bold text-shadow-light text-4xl text-gray-800 tracking-wide leading-none">
+                                <h3 class="font-bold text-shadow-light text-3xl text-gray-800 tracking-wide leading-tight">
                                     Our best <br> partners
                                 </h3>
                             </div>
@@ -694,7 +694,7 @@
                                                     </span>
                                                     <img src="assets/images/video/thumb-1.jpeg" alt="video thumbnail image">
                                                 </div>
-                                                <span class="text-white font-normal mt-3 tracking-wide text-lg">How to make salad</span>
+                                                <span class="text-white font-normal mt-1 tracking-wide text-base">How to make salad</span>
                                             </div>
 
 
@@ -725,7 +725,7 @@
                                                         </span>
                                                         <img src="assets/images/video/thumb-2.jpeg" alt="video thumbnail image">
                                                     </div>
-                                                    <span class="text-white font-normal mt-3 tracking-wide text-lg">Top 10 healty food</span>
+                                                    <span class="text-white font-normal mt-1 tracking-wide text-base">Top 10 healty food</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -776,7 +776,7 @@
                                             <h3 class="capitalize font-bold text-white text-4xl px-10 md:px-0 md:text-5xl leading-tight">Kosher Food: Preparation & Guideline</h3>
                                         </div>
                                         <div class="action-button">
-                                            <button class="bg-trans-8-hover transition cursor-pointer border rounded-full w-16 h-16 border-w-trans-3 text-center pt-2 uppercase video-carousel-modal text-white text-lg focus:outline-none active:outline-none" data-video-id="7TUOI23spt0">play</button>
+                                            <button class="bg-trans-8-hover transition cursor-pointer border hidden rounded-full w-16 h-16 border-w-trans-3 text-center uppercase video-carousel-modal text-white text-lg focus:outline-none active:outline-none" data-video-id="7TUOI23spt0">play</button>
                                         </div>
                                     </div>
                                     <div class="w-full lg:w-1/4 flex items-center justify-center lg:justify-end">
@@ -919,12 +919,12 @@
                                 </div>
 
                                 <div class="news my-3 title">
-                                    <h3 class="font-bold text-shadow-light text-4xl text-gray-800 tracking-wide leading-none">
+                                    <h3 class="font-bold text-shadow-light text-3xl text-gray-800 tracking-wide leading-tight">
                                         We are eager <br> to help you
                                     </h3>
                                 </div>
 
-                                <div class="address mt-10">
+                                <div class="address mt-4">
                                     <span class="text-sm tracking-wider font-semibold uppercase text-gray-800 hover:text-gray-900">Address</span>
                                     <div class="text-lg mt-3 text-gray-700">
                                         <p>Residential Location</p>
