fixed margin padding

--- a/menu.html
+++ b/menu.html
@@ -22,12 +22,12 @@
 
 
         <!-- navbar top start -->
-        <nav class="navbar-topborder py-8 border-b">
+        <nav class="navbar-topborder py-5 lg:py-8 border-b">
 
             <div class="container mx-auto">
                 <div class="flex flex-wrap lg:flex-no-wrap lg:mx-5">
 
-                    <div class="w-1/6 lg:w-auto flex items-baseline justify-center h-8">
+                    <div class="w-1/6 lg:w-auto flex items-baseline justify-center h-8 mt-1">
                         <div class="megamenu-burgur ml-1 inner cursor-pointer text-2xl flex items-center relative ">
                             <span>
                                 <i class="lni-menu block"></i>
@@ -121,7 +121,7 @@
                     <!-- logo end -->
 
                     <div class="w-1/6 lg:w-auto">
-                        <div class="inner">
+                        <div class="inner pr-5 lg:pr-0">
                             <ul class="megamenu-grid links-list flex items-center justify-center h-8">
                                 <li class="hidden lg:block">
                                     <span id="searchButton" class="cursor-pointer block px-3 text-xl">
@@ -418,7 +418,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">beef burger</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">beef burger</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$24</span>
@@ -456,7 +456,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">chicken breast</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">chicken breast</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -494,7 +494,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">Brown Burger</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">Brown Burger</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -533,7 +533,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">Chicken Soup</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">Chicken Soup</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -571,7 +571,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">Veg Rice</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">Veg Rice</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -609,7 +609,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">Cream Cake</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">Cream Cake</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -647,7 +647,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">Rainbow Cake</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">Rainbow Cake</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -685,7 +685,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">lemon mint</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">lemon mint</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -723,7 +723,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">burger king</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">burger king</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -761,7 +761,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">Italian Chicken</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">Italian Chicken</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -799,7 +799,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">Just Burger</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">Just Burger</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
@@ -837,7 +837,7 @@
                                                 <div class="mi-info p-3">
                                                     <div class="mi-title mb-2 flex items-center">
                                                         <div class="w-full">
-                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold">Banana Cupcake</a>
+                                                            <a href="single.html" class="text-xl tracking-wide text-shadow-light text-gray-800 font-semibold capitalize">Banana Cupcake</a>
                                                         </div>
                                                         <div class="w-auto ml-auto">
                                                             <span class="font-semibold text-xl text-gray-800 text-shadow-light uppercase">$14</span>
