--- a/single.html
+++ b/single.html
@@ -21,13 +21,14 @@
     <div class="main-wrapper ">
 
 
+
         <!-- navbar top start -->
-        <nav class="navbar-topborder py-8 border-b">
+        <nav class="navbar-topborder py-5 lg:py-8 border-b">
 
             <div class="container mx-auto">
                 <div class="flex flex-wrap lg:flex-no-wrap lg:mx-5">
 
-                    <div class="w-1/6 lg:w-auto flex items-baseline justify-center h-8">
+                    <div class="w-1/6 lg:w-auto flex items-baseline justify-center h-8 mt-1">
                         <div class="megamenu-burgur ml-1 inner cursor-pointer text-2xl flex items-center relative ">
                             <span>
                                 <i class="lni-menu block"></i>
@@ -121,7 +122,7 @@
                     <!-- logo end -->
 
                     <div class="w-1/6 lg:w-auto">
-                        <div class="inner">
+                        <div class="inner pr-5 lg:pr-0">
                             <ul class="megamenu-grid links-list flex items-center justify-center h-8">
                                 <li class="hidden lg:block">
                                     <span id="searchButton" class="cursor-pointer block px-3 text-xl">
