--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <div class="w-2/3 lg:w-full text-center flex items-baseline justify-center h-8 ">
                                 <div class="inner ">
                                     <h1 class="text-logo text-xl lg:text-2xl tracking-widest text-gray-900 mb-0 inline-block font-semibold text-shadow">
-                                        <a href="index.html" class="block">Tailwind Resturent</a>    
+                                        <a href="index.html" class="block">Tailwind Resturent</a>
                                     </h1>
                                     <!-- text logo end-->
                                 </div>
@@ -198,7 +198,7 @@
                                                 <span class="block text-black">kosher</span>
                                             </h1>
                                             <div class="lg:mt-5 my-2">
-                                                <a href="menu.html" class="inline-block px-5 md:py-2 text-sm lg:text-base bg-black text-white hover:bg-white hover:text-black font-semibold tracking-widest uppercase rounded hover:shadow-xl transition">View Menu</a>
+                                                <a href="menu.html" class="inline-block px-5 py-2 text-sm lg:text-base bg-black text-white hover:bg-white hover:text-black font-semibold tracking-widest uppercase rounded hover:shadow-xl transition">View Menu</a>
                                             </div>
                                         </div>
                                     </div>
