--- a/single.html
+++ b/single.html
@@ -286,14 +286,14 @@
 
 
     <!-- Donwload Theme Bar Start -->
-    <!-- <div class="text-center fixed border bottom-0 shadow-2xl w-full left-0 bg-white ">
+    <div class="text-center fixed border bottom-0 shadow-2xl w-full left-0 bg-white z-50">
         <div class="donwload-this-theme bg-white inline-block p-3 text-xl rounded leading-tight ">
             <h1>
                 <a class="hover:text-yellow-600 " href="https://getidea.net ">Download this theme from here.</a>
             </h1>
             <small class="text-sm text-gray-600 ">For more themes visit <a class="hover:text-gray-900 " href="https://getidea.net ">www.getidea.net</a></small>
         </div>
-    </div> -->
+    </div>
     <!-- Donwload Theme Bar End -->
 
 
