--- a/single.html
+++ b/single.html
@@ -172,26 +172,105 @@
 
 
         <!-- menu section start -->
-        <section class="menu-wrapper my-16">
+        <section class="menu-wrapper mt-5 lg:my-16">
             <div class="container mx-auto">
 
                 <div class="flex flex-wrap relative">
                     <!-- <div class=""> -->
-                    <div class="w-full lg:w-1/5">
+                    <div class="w-full lg:w-1/2 flex items-center">
                         <div class="inner p-3">
-                            left
+
+                            <h1 class="font-bold text-shadow-light text-4xl text-gray-800 tracking-wide leading-tight">Chocolate Chip Cookie Chip Cookie</h1>
+                            <a href="#" class="text-gray-700 resturent-name font-semibold inline-block border-b border-transparent hover:border-gray-500 text-sm mt-2">Green 14</a>
+
+                            <!-- reviews-block -->
+                            <div class="reviews-block mt-2">
+                                <div class="rating tracking-widest text-xl">
+                                    <a href="#"> <span class="text-base tracking-normal text-gray-700"> (0) </span> <span class="star">☆</span><span class="star">☆</span><span class="star">☆</span><span class="star">☆</span><span class="star">☆</span></a>
+                                </div>
+                            </div>
+                            <!-- reviews-block end -->
+
+
+                            <div class="info mt-10 mr-10">
+                                <div class="flex">
+                                    <div class="w-1/3">
+                                        <div class="inner py-3 text-center">
+                                            <div class="text-shadow-light uppercase text-3xl font-semibold text-gray-800"><span>$</span><span>24</span></div>
+                                            <div class="label text-sm text-shadow-light text-gray-700 tracking-wider">Price</div>
+                                        </div>
+                                    </div>
+                                    <div class="w-1/3 border-l border-r">
+                                        <div class="inner py-3 text-center">
+                                            <div class="text-shadow-light uppercase text-3xl font-semibold text-gray-800"><span>180</span></div>
+                                            <div class="label text-sm text-shadow-light text-gray-700 tracking-wider">Calories</div>
+                                        </div>
+                                    </div>
+                                    <div class="w-1/3">
+                                        <div class="inner py-3 text-center">
+                                            <div class="text-shadow-light uppercase text-3xl font-semibold text-gray-800"><span style="margin-right:-6px">30</span> <span class="text-xs text-gray-600 capitalize">M</span></div>
+                                            <div class="label text-sm text-shadow-light text-gray-700 tracking-wider">Estimated Delivery</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- info end -->
+
+                            <div class="order-block mt-10">
+                                <div class="flex">
+                                    <div class="w-auto ">
+                                        <a href="" class="px-4 rounded bg-black text-white hover:text-black hover:bg-white transition inline-block p-1 py-2 border border-black text-lg uppercase text-semibold tracking-wide text-shadow-light">Order Now</a>
+                                    </div>
+                                    <div class="w-auto ml-auto lg:ml-0 flex items-center justify-center">
+                                        <span class="ml-5 text-4xl hover:text-red-500 text-gray-700 lni-heart cursor-pointer"></span>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
-                    <div class="w-full lg:w-4/5">
+                    <div class="w-full lg:w-1/2 lg:mt-0 mt-5">
                         <div class="inner p-3">
-                            right
+                            <div class="single-image rounded overflow-hidden transition hover:shadow-2xl cursor-pointer">
+                                <img src="assets/images/single/1.jpg" alt="single image" class="w-full block">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <!-- hr line -->
+            <div class="container mx-auto lg:p-0 p-3">
+                <hr class="bg-1 bg-gray-300 w-full my-2 mt-5 lg:my-16">
+            </div>
+            <!-- hr line -->
+
+            <div class="container mx-auto lg:p-0 p-3">
+                <!-- single info start -->
+                <div class="single-info">
+                    <div class="inner content text-base leading-normal text-gray-800">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, excepturi perferendis? Fuga quae ut natus, cum voluptatum excepturi nostrum exercitationem perferendis omnis tempora hic ipsam eos suscipit, fugiat, architecto inventore.
+                            ipsum dolor sit amet consectetur adipisicing elit. Et suscipit architecto molestiae ex. Laborum consequuntur adipisci quasi voluptatum, eaque voluptate, dicta repudiandae, illo quas sapiente ut consequatur! Eum, impedit consectetur.</p>
+                        <p>fugiat, architecto inventore. ipsum dolor sit amet consectetur adipisicing elit. Et suscipit architecto molestiae ex. Laborum consequuntur adipisci quasi voluptatum, eaque voluptate, dicta repudiandae, illo quas sapiente ut consequatur!
+                            Eum, impedit consectetur.</p>
+                    </div>
+                </div>
+                <!-- single info end -->
+
+                <!-- single menu category start -->
+                <div class="category-block mt-16">
+                    <span class="font-semibold uppercase text-base tracking-wider">Menu:</span>
+                    <span class=" ml-2 font-semibold text-gray-700 text-sm capitalize tracking-wider">
+                    <a href="" class="border-b inline-block border-transparent hover:border-gray-500">snacks</a>,
+                    <a href="" class="border-b inline-block border-transparent hover:border-gray-500">chocolate</a>,
+                    <a href="" class="border-b inline-block border-transparent hover:border-gray-500">cookies</a>
+                </span>
+                </div>
+                <!-- single menu category end -->
+            </div>
+
         </section>
         <!-- menu section end -->
-
 
         <!-- footer start here -->
         <footer class="py-24 border-t">
@@ -286,14 +365,14 @@
 
 
     <!-- Donwload Theme Bar Start -->
-    <div class="text-center fixed border bottom-0 shadow-2xl w-full left-0 bg-white z-50">
+    <!-- <div class="text-center fixed border bottom-0 shadow-2xl w-full left-0 bg-white ">
         <div class="donwload-this-theme bg-white inline-block p-3 text-xl rounded leading-tight ">
             <h1>
                 <a class="hover:text-yellow-600 " href="https://getidea.net ">Download this theme from here.</a>
             </h1>
             <small class="text-sm text-gray-600 ">For more themes visit <a class="hover:text-gray-900 " href="https://getidea.net ">www.getidea.net</a></small>
         </div>
-    </div>
+    </div> -->
     <!-- Donwload Theme Bar End -->
 
 
